--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,7 @@ body{
 }
 #thumbnail{
 	background-image: url('thumbnail.jpg');
+	background-repeat: no-repeat;
 	position: relative;
 	top: 5%;
 	left: 5%;
